Se han añadido carpetas

--- a/miweb.html
+++ b/miweb.html
@@ -6,15 +6,15 @@
 		
 			<title> Página de prueba </title>
 			
+			<link href="CSS/estilo.css" rel="stylesheet" type="test/css">
+			
 		</head>
 		
 		<body>
 		
 		<h1> Comienzo de la página </h1>
-		
-		<p1> Este es el párrafo 1 </p1>
-		
-		<p2> Este es el segundo párrafo </p2>
+		<p> Este es el párrafo 1 </p>
+		<p> Este es el segundo párrafo </p>
 		
 		</body>
 		
