--- a/miweb.html
+++ b/miweb.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 	<html>
 	
@@ -6,7 +6,7 @@
 		
 			<title> Página de prueba </title>
 			
-			<link href="CSS/estilo.css" rel="stylesheet" type="test/css">
+			<link rel="stylesheet" href="CSS/estilo.css">
 			
 		</head>
 		
@@ -18,4 +18,4 @@
 		
 		</body>
 		
-	</html>
+	</html>	
