--- a/miweb.html
+++ b/miweb.html
@@ -13,6 +13,7 @@
 		<body>
 		
 		<h1> Comienzo de la página </h1>
+		<h2> Añado otro texto con h2 </h2>
 		<p> Este es el párrafo 1 </p>
 		<p> Este es el segundo párrafo </p>
 		
